# wMSM

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
datasets/synthetic_itn_like/: README.md  synthetic_itn_like.npz
docs/: api_quick_reference.md  math.md  usage.md
notebooks/: wmsm_synthetic_itn_demo.ipynb
src/wmsm/: __init__.py  cremb.py  datasets.py  metrics.py  wmsm.py
src/wmsm/data/: __init__.py  synthetic_itn_like_metadata.json
tests/: test_synthetic_pipeline.py
